@@ -9,6 +9,10 @@ PHP                                                                        NEWS
     ext/dom). (nielsdos)
   . Fixed bug GH-12273 (__builtin_cpu_init check). (Freaky)
 
+- CType:
+  . Fixed bug GH-11997 (ctype_alnum 5 times slower in PHP 8.1 or greater).
+    (nielsdos)
+
 - Filter:
   . Fix explicit FILTER_REQUIRE_SCALAR with FILTER_CALLBACK (ilutov)
 
